fixed an issue with the output on mobile devices

--- a/src/components/Output/Output.scss
+++ b/src/components/Output/Output.scss
@@ -28,5 +28,7 @@
 @media screen and (max-width: 600px) {
   .Output {
     width: 95vw;
+    height: 10vh;
+    margin-bottom: -12vw;
   }
 }
